--- a/roles/common/validate_schema/tasks/main.yml
+++ b/roles/common/validate_schema/tasks/main.yml
@@ -7,11 +7,13 @@
   assert:
     that:
       - service_id is defined
+      - service_name is defined
+      - service_image is defined
       - exports is defined
       - storage is defined
       - health is defined
       - runtime_templates is defined
-    fail_msg: "Service {{ service_id }} is missing required contract fields"
+    fail_msg: "Service {{ service_id | default('unknown') }} is missing required contract fields"
 
 - name: Validate required dependencies exist
   assert:
