--- a/roles/common/apply_runtime/tasks/docker.yml
+++ b/roles/common/apply_runtime/tasks/docker.yml
@@ -3,6 +3,8 @@
   set_fact:
     compose_secret_env: "{{ secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] }}"
     compose_secret_files: "{{ secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] }}"
+    compose_secret_env_path: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
+    compose_secret_shred: "{{ secrets.shred_after_apply | default(false) if secrets is defined else false }}"
 
 - name: Write Compose secret environment file
   copy:
@@ -38,6 +40,31 @@
       - "{{ runtime_config_path | basename }}"
     state: present
     pull: always
+
+- name: Remove Compose secret environment file after apply
+  file:
+    path: "{{ compose_secret_env_path }}"
+    state: absent
+  when:
+    - compose_secret_shred | bool
+    - compose_secret_env | length > 0
+
+- name: Remove Compose secret files after apply
+  file:
+    path: "{{ runtime_output_dir }}/secrets/{{ item.name }}"
+    state: absent
+  loop: "{{ compose_secret_files }}"
+  when:
+    - compose_secret_shred | bool
+    - compose_secret_files | length > 0
+
+- name: Remove Compose secret directory after apply
+  file:
+    path: "{{ runtime_output_dir }}/secrets"
+    state: absent
+  when:
+    - compose_secret_shred | bool
+    - compose_secret_files | length > 0
 
 - name: Set service IP for health checks
   set_fact:
