--- a/roles/common/apply_runtime/tasks/docker.yml
+++ b/roles/common/apply_runtime/tasks/docker.yml
@@ -4,7 +4,7 @@
     compose_secret_env: "{{ secrets.env if secrets is defined and secrets.env is not none and secrets.env | length > 0 else [] }}"
     compose_secret_files: "{{ secrets.files if secrets is defined and secrets.files is not none and secrets.files | length > 0 else [] }}"
     compose_secret_env_path: "{{ runtime_output_dir }}/{{ service_name | default(service_id) }}.env"
-    compose_secret_shred: "{{ secrets.shred_after_apply | default(true) if secrets is defined else true }}"
+    compose_secret_shred: "{{ secrets.shred_after_apply if secrets is defined else true }}"
 
 - name: Write Compose secret environment file
   copy:
