--- a/roles/edge_pfsense/tasks/main.yml
+++ b/roles/edge_pfsense/tasks/main.yml
@@ -5,6 +5,13 @@
       - pfsense_api_token | length > 0
     fail_msg: "pfsense_api_token must be provided to configure HAProxy"
 
+- name: Enforce scoped pfSense API token permissions
+  ansible.builtin.assert:
+    that:
+      - "'root' not in (pfsense_api_token | lower)"
+      - "'global' not in (pfsense_api_token | lower)"
+    fail_msg: "pfsense_api_token must be scoped to the HAProxy API instead of root/global access"
+
 - name: Initialize pfSense payload containers
   set_fact:
     pfsense_backends: []
@@ -66,14 +73,13 @@
     validate_certs: "{{ pfsense_api_verify_ssl }}"
     body_format: json
     status_code: 200
-    body:
-      frontends: {{ pfsense_frontends }}
-      backends: {{ pfsense_backends }}
+    body: "{{ {'frontends': pfsense_frontends, 'backends': pfsense_backends} | to_json }}"
   register: pfsense_config_result
   no_log: true
+  when: not (edge_ingress_skip_push | default(false) | bool)
 
 - name: Apply HAProxy configuration on pfSense
-  when: pfsense_apply_changes
+  when: pfsense_apply_changes and not (edge_ingress_skip_push | default(false) | bool)
   uri:
     url: "{{ pfsense_api_scheme }}://{{ pfsense_api_host }}:{{ pfsense_api_port }}/api/v1/services/haproxy/apply"
     method: POST
