--- a/roles/edge_pfsense_squid/tasks/main.yml
+++ b/roles/edge_pfsense_squid/tasks/main.yml
@@ -5,6 +5,13 @@
       - pfsense_squid_api_token | length > 0
     fail_msg: "pfsense_squid_api_token must be provided to configure pfSense Squid"
 
+- name: Enforce scoped pfSense Squid API token permissions
+  ansible.builtin.assert:
+    that:
+      - "'root' not in (pfsense_squid_api_token | lower)"
+      - "'global' not in (pfsense_squid_api_token | lower)"
+    fail_msg: "pfsense_squid_api_token must be scoped to Squid APIs instead of root/global access"
+
 - name: Initialize pfSense Squid payload containers
   ansible.builtin.set_fact:
     pfsense_squid_peers: []
@@ -50,14 +57,13 @@
     validate_certs: "{{ pfsense_squid_api_verify_ssl }}"
     body_format: json
     status_code: 200
-    body:
-      peers: {{ pfsense_squid_peers }}
-      mappings: {{ pfsense_squid_mappings }}
+    body: "{{ {'peers': pfsense_squid_peers, 'mappings': pfsense_squid_mappings} | to_json }}"
   register: pfsense_squid_result
   no_log: true
+  when: not (edge_ingress_skip_push | default(false) | bool)
 
 - name: Apply Squid configuration on pfSense
-  when: pfsense_squid_apply_changes | bool
+  when: (pfsense_squid_apply_changes | bool) and not (edge_ingress_skip_push | default(false) | bool)
   ansible.builtin.uri:
     url: "{{ pfsense_squid_api_scheme }}://{{ pfsense_squid_api_host }}:{{ pfsense_squid_api_port }}/api/v1/services/squid/apply"
     method: POST
