Improve Proxmox runtime safety

--- a/roles/common/apply_runtime/tasks/proxmox.yml
+++ b/roles/common/apply_runtime/tasks/proxmox.yml
@@ -10,51 +10,93 @@
       - lxc_config.container_ip | length > 0
     fail_msg: "Rendered Proxmox configuration must define container_ip"
 
-- name: Validate Proxmox API token configuration
-  assert:
-    that:
-      - proxmox_api_token_id is defined
-      - proxmox_api_token_id | length > 0
-      - proxmox_api_token_secret is defined
-      - proxmox_api_token_secret | length > 0
-      - proxmox_api_host is defined
-      - proxmox_api_host | length > 0
-      - proxmox_node is defined
-      - proxmox_node | length > 0
-    fail_msg: "Proxmox API token credentials (id/secret) and target node must be defined"
+  - name: Validate Proxmox API token configuration
+    assert:
+      that:
+        - proxmox_api_token_id is defined
+        - proxmox_api_token_id | length > 0
+        - proxmox_api_token_secret is defined
+        - proxmox_api_token_secret | length > 0
+        - proxmox_api_host is defined
+        - proxmox_api_host | length > 0
+        - proxmox_node is defined
+        - proxmox_node | length > 0
+      fail_msg: "Proxmox API token credentials (id/secret) and target node must be defined"
 
-- name: Set container IP facts
-  set_fact:
-    container_ip: "{{ lxc_config.container_ip }}"
-    service_ip: "{{ lxc_config.container_ip }}"
+  - name: Set Proxmox API connection parameters
+    set_fact:
+      proxmox_api_scheme: "{{ proxmox_api_use_https | default(true) | ternary('https', 'http') }}"
+      proxmox_api_port: {{ proxmox_api_port | default(8006) }}
+      proxmox_validate_certs: {{ proxmox_validate_certs | default(true) }}
 
-- name: Create LXC container
-  community.general.proxmox:
-    vmid: "{{ lxc_config.container.vmid }}"
-    hostname: "{{ lxc_config.container.hostname }}"
-    node: "{{ proxmox_node }}"
-    api_token_id: "{{ proxmox_api_token_id }}"
-    api_token_secret: "{{ proxmox_api_token_secret }}"
-    api_host: "{{ proxmox_api_host }}"
-    ostemplate: "{{ lxc_config.container.ostemplate }}"
-    disk: "{{ lxc_config.container.disk }}"
-    cores: "{{ lxc_config.container.cores }}"
-    memory: "{{ lxc_config.container.memory }}"
-    swap: "{{ lxc_config.container.swap }}"
-    netif: "{{ lxc_config.container.netif }}"
-    onboot: "{{ lxc_config.container.onboot }}"
-    unprivileged: "{{ lxc_config.container.unprivileged }}"
-    features: "{{ lxc_config.container.features | default(omit, true) }}"
-    state: present
+  - name: Validate Proxmox API credentials
+    ansible.builtin.uri:
+      url: "{{ proxmox_api_scheme }}://{{ proxmox_api_host }}:{{ proxmox_api_port }}/api2/json/nodes"
+      method: GET
+      headers:
+        Authorization: "PVEAPIToken={{ proxmox_api_token_id }}={{ proxmox_api_token_secret }}"
+      validate_certs: {{ proxmox_validate_certs }}
+      status_code: [200]
+      timeout: {{ proxmox_api_timeout | default(30) }}
+    register: proxmox_api_validation
+    failed_when: proxmox_api_validation.status != 200
+    no_log: "{{ proxmox_hide_sensitive | default(true) }}"
 
-- name: Start container
-  community.general.proxmox:
-    vmid: "{{ lxc_config.container.vmid }}"
-    node: "{{ proxmox_node }}"
-    api_token_id: "{{ proxmox_api_token_id }}"
-    api_token_secret: "{{ proxmox_api_token_secret }}"
-    api_host: "{{ proxmox_api_host }}"
-    state: started
+  - name: Set container IP facts
+    set_fact:
+      container_ip: "{{ lxc_config.container_ip }}"
+      service_ip: "{{ lxc_config.container_ip }}"
+
+  - name: Provision Proxmox container
+    block:
+      - name: Create LXC container
+        community.general.proxmox:
+          vmid: "{{ lxc_config.container.vmid }}"
+          hostname: "{{ lxc_config.container.hostname }}"
+          node: "{{ proxmox_node }}"
+          api_token_id: "{{ proxmox_api_token_id }}"
+          api_token_secret: "{{ proxmox_api_token_secret }}"
+          api_host: "{{ proxmox_api_host }}"
+          ostemplate: "{{ lxc_config.container.ostemplate }}"
+          disk: "{{ lxc_config.container.disk }}"
+          cores: "{{ lxc_config.container.cores }}"
+          memory: "{{ lxc_config.container.memory }}"
+          swap: "{{ lxc_config.container.swap }}"
+          netif: "{{ lxc_config.container.netif }}"
+          onboot: "{{ lxc_config.container.onboot }}"
+          unprivileged: "{{ lxc_config.container.unprivileged }}"
+          features: "{{ lxc_config.container.features | default(omit, true) }}"
+          state: present
+        no_log: "{{ proxmox_hide_sensitive | default(true) }}"
+
+      - name: Start container
+        community.general.proxmox:
+          vmid: "{{ lxc_config.container.vmid }}"
+          node: "{{ proxmox_node }}"
+          api_token_id: "{{ proxmox_api_token_id }}"
+          api_token_secret: "{{ proxmox_api_token_secret }}"
+          api_host: "{{ proxmox_api_host }}"
+          state: started
+        no_log: "{{ proxmox_hide_sensitive | default(true) }}"
+    rescue:
+      - name: Attempt to remove failed LXC container
+        community.general.proxmox:
+          vmid: "{{ lxc_config.container.vmid }}"
+          node: "{{ proxmox_node }}"
+          api_token_id: "{{ proxmox_api_token_id }}"
+          api_token_secret: "{{ proxmox_api_token_secret }}"
+          api_host: "{{ proxmox_api_host }}"
+          state: absent
+          force: true
+        register: proxmox_cleanup
+        failed_when: false
+        no_log: "{{ proxmox_hide_sensitive | default(true) }}"
+
+      - name: Fail provisioning after cleanup attempt
+        fail:
+          msg: |
+            Proxmox container provisioning failed and a cleanup was attempted.
+            Cleanup result: {{ proxmox_cleanup | default({}) }}
 
 - name: Wait for container SSH
   wait_for:
